Chrome::setSelectedColorInColorChooser shouldn't be called when color chooser sets a new color https://bugs.webkit.org/show_bug.cgi?id=66658

Reviewed by Kent Tamura.

* html/ColorInputType.cpp:
(WebCore::ColorInputType::colorSelected): Call setValueFromRenderer instead of setValue.
* html/ColorInputType.h:


Canonical link: https://commits.webkit.org/82485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93503 268f45cc-cd09-0410-ab3c-d52691b4dbfc